--- a/Assets/CSS/output.css
+++ b/Assets/CSS/output.css
@@ -188,6 +188,9 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-screen {
+    height: 100vh;
+  }
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
