--- a/Assets/CSS/output.css
+++ b/Assets/CSS/output.css
@@ -254,6 +254,9 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
