--- a/Assets/CSS/output.css
+++ b/Assets/CSS/output.css
@@ -1,4 +1,5 @@
 /*! tailwindcss v4.1.18 | MIT License | https://tailwindcss.com */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -9,19 +10,8 @@
       "Courier New", monospace;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-md: 28rem;
-    --text-xl: 1.25rem;
-    --text-xl--line-height: calc(1.75 / 1.25);
-    --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
-    --text-4xl: 2.25rem;
-    --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
-    --font-weight-bold: 700;
-    --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -178,80 +168,20 @@
   }
 }
 @layer utilities {
-  .mt-6 {
-    margin-top: calc(var(--spacing) * 6);
-  }
-  .block {
-    display: block;
-  }
   .flex {
     display: flex;
-  }
-  .table {
-    display: table;
-  }
-  .h-12 {
-    height: calc(var(--spacing) * 12);
-  }
-  .h-\[2\.3vh\] {
-    height: 2.3vh;
-  }
-  .h-\[2\.5vh\] {
-    height: 2.5vh;
-  }
-  .h-\[2vh\] {
-    height: 2vh;
   }
   .h-\[5vh\] {
     height: 5vh;
   }
-  .h-\[6\.8vh\] {
-    height: 6.8vh;
-  }
   .h-\[25svh\] {
     height: 25svh;
-  }
-  .h-\[25vh\] {
-    height: 25vh;
-  }
-  .h-\[29vh\] {
-    height: 29vh;
   }
   .h-screen {
     height: 100vh;
   }
-  .w-full {
-    width: 100%;
-  }
-  .max-w-2 {
-    max-width: calc(var(--spacing) * 2);
-  }
-  .max-w-2\/5 {
-    max-width: calc(2/5 * 100%);
-  }
-  .max-w-\[330px\] {
-    max-width: 330px;
-  }
-  .max-w-\[335px\] {
-    max-width: 335px;
-  }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .shrink-0 {
     flex-shrink: 0;
-  }
-  .flex-grow {
-    flex-grow: 1;
-  }
-  .grow {
-    flex-grow: 1;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -268,15 +198,8 @@
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
-  .gap-6 {
-    gap: calc(var(--spacing) * 6);
-  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .bg-linear-to-br {
     --tw-gradient-position: to bottom right;
@@ -313,23 +236,11 @@
     --tw-gradient-to: #13566C;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
-  }
   .px-3\.5 {
     padding-inline: calc(var(--spacing) * 3.5);
   }
-  .px-4 {
-    padding-inline: calc(var(--spacing) * 4);
-  }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
-  }
-  .py-3 {
-    padding-block: calc(var(--spacing) * 3);
-  }
-  .py-3\.5 {
-    padding-block: calc(var(--spacing) * 3.5);
   }
   .text-center {
     text-align: center;
@@ -337,39 +248,14 @@
   .text-left {
     text-align: left;
   }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
-  }
   .text-\[2\.3svh\] {
     font-size: 2.3svh;
-  }
-  .text-\[2\.3vh\] {
-    font-size: 2.3vh;
-  }
-  .text-\[3\.3vh\] {
-    font-size: 3.3vh;
   }
   .text-\[3svh\] {
     font-size: 3svh;
   }
-  .text-\[3vh\] {
-    font-size: 3vh;
-  }
   .text-\[5svh\] {
     font-size: 5svh;
-  }
-  .text-\[5vh\] {
-    font-size: 5vh;
-  }
-  .text-\[22px\] {
-    font-size: 22px;
-  }
-  .text-\[24px\] {
-    font-size: 24px;
-  }
-  .text-\[30px\] {
-    font-size: 30px;
   }
   .leading-\[100\%\] {
     --tw-leading: 100%;
@@ -383,18 +269,8 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .text-\[2\.3\] {
-    color: 2.3;
-  }
   .text-white {
     color: var(--color-white);
-  }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .transition-all {
     transition-property: all;
@@ -404,13 +280,6 @@
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
-  }
-  .hover\:opacity-70 {
-    &:hover {
-      @media (hover: hover) {
-        opacity: 70%;
-      }
-    }
   }
   .hover\:opacity-80 {
     &:hover {
@@ -429,26 +298,11 @@
       height: 29svh;
     }
   }
-  .sm\:h-\[29vh\] {
-    @media (width >= 40rem) {
-      height: 29vh;
-    }
-  }
-  .sm\:max-w-\[170px\] {
-    @media (width >= 40rem) {
-      max-width: 170px;
-    }
-  }
-  .sm\:max-w-\[200px\] {
-    @media (width >= 40rem) {
-      max-width: 200px;
-    }
-  }
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
+body {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 @property --tw-gradient-position {
   syntax: "*";
@@ -500,11 +354,6 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -512,7 +361,6 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
-      --tw-border-style: solid;
       --tw-gradient-position: initial;
       --tw-gradient-from: #0000;
       --tw-gradient-via: #0000;
@@ -524,7 +372,6 @@
       --tw-gradient-to-position: 100%;
       --tw-leading: initial;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
       --tw-duration: initial;
     }
   }
